[gd_scene load_steps=5 format=3 uid="uid://b74am5hx407og"]

[ext_resource type="Script" uid="uid://dgvyv1xom7paa" path="res://menu/setting.gd" id="1_xxgf1"]
[ext_resource type="Texture2D" uid="uid://e7hsfywf5dbd" path="res://menu/empty_menu.png" id="2_k43gw"]
[ext_resource type="FontFile" uid="uid://bxrcnifikqq60" path="res://assets/font/KC Nightmare.ttf" id="3_u1j2k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s3057"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="setting" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xxgf1")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_k43gw")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 124.0
offset_top = 115.0
offset_right = 1018.0
offset_bottom = 460.0
color = Color(0.486275, 0.486275, 0.486275, 0.694118)

[node name="volume" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 148.0
offset_top = 151.0
offset_right = -158.0
offset_bottom = -375.0
grow_horizontal = 2
grow_vertical = 2
value = 50.0

[node name="mute" type="CheckBox" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -425.0
offset_top = 19.0
offset_right = -401.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)

[node name="volume_label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -446.0
offset_top = -149.0
offset_right = -311.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_u1j2k")
theme_override_font_sizes/font_size = 25
text = "VOLUME"
horizontal_alignment = 1

[node name="mute_label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -454.0
offset_top = -7.0
offset_right = -319.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_u1j2k")
theme_override_font_sizes/font_size = 25
text = "MUTE"
horizontal_alignment = 1

[node name="back" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.0
offset_top = 160.0
offset_right = 79.0
offset_bottom = 207.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_u1j2k")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_s3057")
text = "BACK"

[connection signal="value_changed" from="volume" to="." method="_on_volume_value_changed"]
[connection signal="toggled" from="mute" to="." method="_on_mute_toggled"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
